# AI-Devs4

./: .gitignore  main.py  pyproject.toml  requirements.txt
01-Programming_the_operation_of_laguage_model/: main.py
01-Programming_the_operation_of_laguage_model/s01e01_02_model_interactions_and_techniques_for_connecting_the_model_with_tools/: main.py
01-Programming_the_operation_of_laguage_model/s01e03_designing_API_for_efficient_work_with_the_model/: app.py  testtt.ipynb
01-Programming_the_operation_of_laguage_model/s01e04_s01e04_support_for_multimodality_and_attachments/: main.py  mcp.json  test1111.ipynb
01-Programming_the_operation_of_laguage_model/s01e05_managing_explicit_and_implicit_model_constraints/: main.py
02-Building_and_managing_context/s02e01_context_management_in_conversation/: main.py
02-Building_and_managing_context/s02e02_external_context_of_tools_and_documents/: main.py
02-Building_and_managing_context/s02e03_documents_and_long_term_memory_as_tools/: .mcp.json  main.py
02-Building_and_managing_context/s02e04_organizing_the_context_for_multiple_threads/: main.py
02-Building_and_managing_context/s02e05_agent_design/: .mcp.json  main.py
03-Managing_the_non_deterministic_nature_of_models/s03e01_observation_and_evaluation/: main.py
03-Managing_the_non_deterministic_nature_of_models/s03e02_limitations_of_models_during_the_project_planning_phase/: main.py
03-Managing_the_non_deterministic_nature_of_models/s03e03_contextual_feedback_to_support_agent_effectiveness/: main.py
(+180 files in other folders)
